<resources>
    <string name="app_name">NutriiSystem</string>
    <string name="txt_view_String">REGISTRARSE</string>
    <string name="txt_ingresar_String">INGRESAR</string>
    <string name="edtx">INGRESE USUARIO</string>
    <string name="edtx2">INGRESE CONTRASEÑA </string>
    <string name="PEDIDOS">PEDIDOS</string>
    <string name="STOCK">STOCK</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lavalle">LAVALLE</string>
</resources>
